# Time-Series-Library

./: pyproject.toml  run.py
src/tslib/data_provider/: data_loader.py
src/tslib/exp/: exp_anomaly_detection.py  exp_basic.py  exp_classification.py  exp_imputation.py  exp_long_term_forecasting.py  exp_zero_shot_forecasting.py
src/tslib/layers/: MSGBlock.py
src/tslib/models/: Chronos.py  Chronos2.py  Crossformer.py  FEDformer.py  MICN.py  MSGNet.py  MambaSimple.py  Moirai.py  MultiPatchFormer.py  Nonstationary_Transformer.py  Sundial.py  TiRex.py  TimeFilter.py  TimeMixer.py  TimeMoE.py  TimesFM.py  TimesNet.py  WPMixer.py  __init__.py
tutorial/: TimesNet_tutorial.ipynb
